<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="165dp"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:fontFamily="@font/bangers"
        android:text="Brain Quiz"
        android:textColor="#E85C68"
        android:textSize="40sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/register_from"
        android:textColor="#FF9A242F"
        android:textSize="45sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:textColorHint="@color/black95"
        android:maxLines="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/black95"
        android:maxLines="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/address"
        android:hint="@string/address"
        android:textColorHint="@color/black95"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black95"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/gender"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/male"
            android:textColor="@color/black95"
            android:id="@+id/Male"
            android:checked="true"
            android:buttonTint="#E85C68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/female"
            android:textColor="@color/black95"
            android:id="@+id/Female"
            android:buttonTint="#E85C68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>