<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:fontFamily="@font/bangers"
        android:layout_gravity="center"
        android:text="Brain Quiz"
        android:textColor="#E85C68"
        android:textSize="45sp"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_marginTop="100dp"
        android:layout_width="217dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:textColorHint="@color/black95"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/black95"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/register"
            android:layout_marginTop="5dp"
            android:text="@string/register"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>