<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:background="@drawable/button_stroke_black95_press_white"
                    android:textSize="24sp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black95"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/level1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black95"
                        android:text="@string/level1" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="211dp"
                        android:layout_height="104dp"
                        android:layout_marginRight="10dp"
                        android:enabled="false"
                        android:background="@drawable/firstlevel"
                        android:gravity="center" />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/level2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black95"
                        android:text="@string/level2" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="212dp"
                        android:layout_height="101dp"
                        android:layout_marginRight="10dp"
                        android:enabled="false"
                        android:background="@drawable/secondlevel"
                        android:gravity="center" />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/level3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black95"
                        android:text="@string/level3" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="214dp"
                        android:layout_height="98dp"
                        android:layout_marginRight="10dp"
                        android:enabled="false"
                        android:background="@drawable/thirdlevel"
                        android:gravity="center" />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/level4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black95"
                        android:text="@string/level4" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="214dp"
                        android:layout_height="104dp"
                        android:layout_marginRight="10dp"
                        android:enabled="false"
                        android:background="@drawable/fourlevel"
                        android:gravity="center" />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/level5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black95"
                        android:text="@string/level5" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="209dp"
                        android:layout_height="94dp"
                        android:enabled="false"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/fivelevel"
                        android:gravity="center" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>